2002-03-06  Christian Meyer  <chrisime@gnome.org>

	* configure.in: Added 'de' to ALL_LINGUAS.

2002-03-05  Paolo Maggi  <maggi@athena.polito.it>

	* libgnome/gnome-program.c (gnome_program_locate_file):
	search files in {prefix}/share/gnome/help/{app_id}/
	when using GNOME_FILE_DOMAIN_APP_HELP domain

	* libgnome/gnome-help.c (locate_help_file): removed extra
	"/" between path and lang

2002-03-05  Eric Baudais  <baudais@okstate.edu>

	* help-converters/docbook/gnome-customization/gnome-custom.xsl:
	Sync the general customizations with gnome-docu/gdp/xsl.
	* help-converters/docbook/gnome-customization/l10n.xml:
	Sync the general customizations with gnome-docu/gdp/xsl.

2002-03-05  Eric Baudais  <baudais@okstate.edu>

	* help-converters/docbook/gnome-customization/gnome-customization.xsl: 
	changed the stylesheets to 1.48.  after testing no adverse results 
	can be seen.

2002-03-04  Anders Carlsson  <andersca@gnu.org>

	* configure.in: Bump version to 1.112.1

2002-03-03  Mikael Hallendal  <micke@codefactory.se>

	* help-converters/docbook/gnome-db2html3.c:
	(print_err): add dummy printerr-function. Don't output anything.

	* help-converters/info/html.c:
	(dump_html_for_node): add a &nbsp; in anchor tag, otherwise
	  gtkhtml2 won't be able to jump to it.

Fri Feb 22 12:51:48 2002  Jonathan Blandford  <jrb@redhat.com>

	* schemas/desktop_gnome_peripherals_mouse.schemas: why oh why was
	left_handed TRUE by default...  Fixing.

Wed Feb 20 00:05:13 2002  Jonathan Blandford  <jrb@redhat.com>

	* schemas/desktop_gnome_peripherals_mouse.schemas: new schemas to
	handle a cursor font.

2002-02-19 John Fleck <jfleck@inkstain.net>

	* help-converters/docbook/gnome-db2html3.c
	remove old code checking for sgml catalog files. This was
	causing major slowdown for some users (like, for example,
	me)

2002-02-19  Anders Carlsson  <andersca@gnu.org>

	* configure.in: Up to 1.112.0

2002-02-18  Gediminas Paulauskas <menesis@delfi.lt>
